refactor: implement `ImportFileExtension` in payloads template

--- a/template/payloads.ts.tmpl
+++ b/template/payloads.ts.tmpl
@@ -1,6 +1,6 @@
 {{- block "payloads.ts" $ -}}
 {{- template "header/base" }}
-{{ template "import/payloads" $.Collections }}
+{{ template "import/payloads" $ }}
 {{ template "payloads" $.Collections }}
 {{- end }}
 {{- /* "payloads.ts" END */ -}}
